# voice-assistant

./: .gitignore  README.md  langgraph_flow.py  main.py  pyproject.toml  requirements.txt
app/: graph.py  main.py
flow/: overview.excalidraw
speech/: stt.py
tools/: action_execution.py  code_execution.py
